# mnist_neural_network

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt
cmake/: colorful_message.cmake  conan.cmake  project_setup.cmake
data/: mnist_testing_labels  saved_network.nn
networks/: .gitignore
src/check_nn/: CMakeLists.txt  main.cpp
src/check_nn/src/: check_nn.cpp  check_nn.hpp  main.cpp
src/common/: CMakeLists.txt  average_cost_of_neural_net.hpp  digit.hpp  load_mnist_digits.hpp  network.cpp  network.hpp  network_from_file.cpp  network_from_file.hpp  network_to_file.hpp
src/common/src/: average_cost_of_neural_net.cpp  average_cost_of_neural_net.hpp  constrained_integral.hpp  digit.hpp  load_mnist_digits.cpp  network.hpp  network_to_file.cpp  short_types.hpp
src/paint_nn/: CMakeLists.txt  main.cpp
src/paint_nn/src/: paint_nn.cpp  paint_nn.hpp
src/test_nn/: CMakeLists.txt  main.cpp  network.hpp
src/test_nn/src/: main.cpp  test_nn.cpp  test_nn.hpp
src/train_nn/: CMakeLists.txt  constrained_integral.hpp  main.cpp  network.hpp
src/train_nn/src/: main.cpp  train_nn.cpp  train_nn.hpp
